# atproto-feeds

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PROVENANCE.md  README.md  ROADMAP.md  pyproject.toml
receipts_feed/: api.py  author_weights.py  business.py  cli.py  cluster.py  config.py  db.py  dm_listener.py  docket.py  domains.py  feed_dedup.py  graph.py  hydrate.py  ingest.py  marginalia.py  publisher.py  rank.py  site.py  sports.py  tags.py  watchlist.py  weather.py
receipts_feed/static/: robots.txt
receipts_feed/templates/: about.html  archive.html  base.html  business.html  desk.html  edition_detail.html  feed.html  index.html  method.html  sports.html  story.html  watch.html  weather.html
tests/: test_ranking_invariants.py
