[project]
name = "atproto-feeds"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "websockets>=12",
    "httpx>=0.25",
    "jinja2>=3.1",
]

[project.scripts]
receipts-feed = "receipts_feed.cli:main"

[project.optional-dependencies]
test = ["pytest>=7", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
include = ["receipts_feed*"]
